Update layout files

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,6 +10,18 @@
     <nav class="sidebar-nav">
       <span class="sidebar-nav-item"><a href="/about.html">About</a></span>
     </nav>
+      
+    <nav class="sidebar-social">
+        <ul class="navigation">
+          <!-- Twitter -->
+          <li class="social-item twitter">
+            <a href="{{ site.twitter }}" title="{{ site.twitter }} on Twitter" target="_blank">
+              <i class='icon fi-social-twitter'></i>
+              <span class="label">Twitter</span>
+            </a>
+          </li>
+        </ul>
+    </nav>
 
     <a href="{{ site.gplus }}" target="_blank">Plus</a> -
     <a href="{{ site.twitter }}" target="_blank">Twitter</a> -
