--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -15,16 +15,27 @@
         <ul class="navigation">
           <!-- Twitter -->
           <li class="social-item twitter">
-            <a href="{{ site.twitter }}" title="{{ site.twitter }} on Twitter" target="_blank">
+            <a href="{{ site.twitter }}" title="@kingsor on Twitter" target="_blank">
               <i class='icon fi-social-twitter'></i>
               <span class="label">Twitter</span>
             </a>
           </li>
+          <!-- Google+ -->
+          <li class="social-item gplus">
+            <a href="{{ site.gplus }}" title="+EdoardoInamo" target="_blank">
+              <i class='icon fi-social-google-plus'></i>
+              <span class="label">Google+</span>
+            </a>
+          </li>
+
+          <!-- GitHub -->
+          <li class="social-item github">
+            <a href="{{ site.github }}" title="@kingor on GitHub" target="_blank">
+              <i class='icon fi-social-github'></i>
+              <span class="label">GitHub</span>
+            </a>
+          </li>
         </ul>
     </nav>
-
-    <a href="{{ site.gplus }}" target="_blank">Plus</a> -
-    <a href="{{ site.twitter }}" target="_blank">Twitter</a> -
-    <a href="{{ site.github }}" target="_blank">Github</a>
   </div>
 </section>
