--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,12 +27,18 @@
               <span class="label">Google+</span>
             </a>
           </li>
-
           <!-- GitHub -->
           <li class="social-item github">
             <a href="{{ site.github }}" title="@kingor on GitHub" target="_blank">
               <i class='icon fi-social-github'></i>
               <span class="label">GitHub</span>
+            </a>
+          </li>
+          <!-- LinkedIn -->
+          <li class="social-item linkedin">
+            <a href="{{site.linkedin}}" title="Edoardo Inamo on LinkedIn" target="_blank">
+              <i class='icon fi-social-linkedin'></i>
+              <span class="label">LinkedIn</span>
             </a>
           </li>
         </ul>
