--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,7 +4,7 @@
       <h1>
         <a href="/">{{ site.title }}</a>
       </h1>
-      <p class="lead">{{ site.tagline }}</p>
+      <p class="lead">{{ site.description }}</p>
     </div>
 
     <nav class="sidebar-nav">
