Updated head template

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,7 +19,7 @@
   <meta name="twitter:site" content="{{ site.twitter }}">
   <meta property="og:type" content="article">
   
-  {% if if page.title == "Home" %}
+  {% if page.title == "Home" %}
   <meta property="og:title" content="{{ site.title }}">
   <meta property="twitter:title" content="{{ site.title }}">
   {% else %}
