--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,30 +11,39 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
   <meta name="author" content="{{ site.author }}" />
-  <meta name="description" content="{{ site.description }}" />
+  {% if page.description %}
+  <meta name="description" content="{{ page.description | strip_html }}">
+  {% else %}
+  <meta name="description" content="{{ site.description }}">
+  {% endif %}
 
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
   
-  <meta name="twitter:site" content="{{ site.twitter }}">
   <meta property="og:type" content="article">
-  
+  <meta property="og:site_name" content="{{ site.title }}">
   {% if page.title == "Home" %}
   <meta property="og:title" content="{{ site.title }}">
-  <meta property="twitter:title" content="{{ site.title }}">
   {% else %}
-  <meta property="og:title" content="{{ page.title }}">
-  <meta property="twitter:title" content="{{ page.title }}">
+  <meta property="og:title" content="{{ page.title }} &ndash; {{ site.title }}">
+  {% endif %}
+  {% if page.description %}
+  <meta property="og:description" content="{{ page.description | strip_html }}">
+  {% else %}
+  <meta property="og:description" content="{{ site.description }}">
   {% endif %}
   
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="{{ site.twitter_name }}">
+  {% if page.title == "Home" %}
+  <meta name="twitter:title" content="{{ site.title }}">
+  {% else %}
+  <meta name="twitter:title" content="{{ page.title }} &ndash; {{ site.title }}">
+  {% endif %}
   {% if page.description %}
   <meta name="twitter:description" content="{{ page.description | strip_html }}">
-  <meta property="og:description" content="{{ page.description | strip_html }}">
-  <meta name="description" content="{{ page.description | strip_html }}">
   {% else %}
   <meta name="twitter:description" content="{{ site.description }}">
-  <meta property="og:description" content="{{ site.description }}">
-  <meta property="description" content="{{ site.description }}">
   {% endif %}
 
   <!-- RSS -->
