--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,9 +8,13 @@
     </div>
 
     <nav class="sidebar-nav">
-      <span class="sidebar-nav-item"><a href="/about.html">About</a></span>
+      <span class="sidebar-nav-item"><a href="/archive/">Archive</a></span>
     </nav>
-      
+
+    <nav class="sidebar-nav">
+      <span class="sidebar-nav-item"><a href="/about/">About</a></span>
+    </nav>
+
     <nav class="sidebar-social">
         <ul class="navigation">
           <!-- Twitter -->
