--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,6 +6,21 @@ layout: default
     <div class="post">
         <h1 class="post-title">{{ page.title }}</h1>
         <span class="post-date">{{ page.date | date: "%B %e, %Y" }}</span>
+        <h3>
+          <small>
+            <i class="fa fa-calendar"></i>&nbsp; {{ page.date | date: "%b %d, %Y" }}
+            <br/>
+            <i class="fa fa-tags"></i>&nbsp;
+            {% if page.tags == null %}
+              Not tagged
+            {% else %}
+              {% for tag in page.tags %}
+                <a href="/tags#{{ tag | slugify }}-ref">{{ tag | capitalize}}</a>
+              {% endfor %}
+            {% endif %}
+
+          </small>
+        </h3>
         {{ content }}
     </div>
 </section>
