add resources page

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,6 +9,7 @@
 
     <nav class="sidebar-nav">
       <span class="sidebar-nav-item"><a href="/archive/">Archive</a></span>
+      <span class="sidebar-nav-item"><a href="/resources/">Resources</a></span>
       <span class="sidebar-nav-item"><a href="/about/">About</a></span>
     </nav>
 
