--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,29 +17,36 @@
         <ul class="navigation">
           <!-- Twitter -->
           <li class="social-item twitter">
-            <a href="{{ site.twitter }}" title="@kingsor on Twitter" target="_blank">
+            <a href="{{ site.twitter }}" title="me on Twitter" target="_blank">
               <i class='icon fi-social-twitter'></i>
               <span class="label">Twitter</span>
             </a>
           </li>
           <!-- Google+ -->
           <li class="social-item gplus">
-            <a href="{{ site.gplus }}" title="+EdoardoInamo" target="_blank">
+            <a href="{{ site.gplus }}" title="me on Google+" target="_blank">
               <i class='icon fi-social-google-plus'></i>
               <span class="label">Google+</span>
             </a>
           </li>
           <!-- GitHub -->
           <li class="social-item github">
-            <a href="{{ site.github }}" title="@kingor on GitHub" target="_blank">
+            <a href="{{ site.github }}" title="me on GitHub" target="_blank">
               <i class='icon fi-social-github'></i>
               <span class="label">GitHub</span>
             </a>
           </li>
           <!-- LinkedIn -->
           <li class="social-item linkedin">
-            <a href="{{site.linkedin}}" title="Edoardo Inamo on LinkedIn" target="_blank">
+            <a href="{{site.linkedin}}" title="me on LinkedIn" target="_blank">
               <i class='icon fi-social-linkedin'></i>
+              <span class="label">LinkedIn</span>
+            </a>
+          </li>
+          <!-- Medium -->
+          <li class="social-item medium">
+            <a href="{{site.medium}}" title="me on Medium" target="_blank">
+              <i class='icon fi-social-medium'></i>
               <span class="label">LinkedIn</span>
             </a>
           </li>
