--- a/css/hyde.css
+++ b/css/hyde.css
@@ -31,7 +31,7 @@
  */
 
 html {
-  font-family: "Karla", Roboto, Helvetica, Arial, sans-serif;
+  font-family: "PT Sans", Helvetica, Arial, sans-serif;
 }
 @media (min-width: 48em) {
   html {
@@ -56,12 +56,7 @@ html {
   text-align: center;
   padding: 2rem 1rem;
   color: rgba(255,255,255,.5);
-    /*
-  background: -webkit-linear-gradient(#009688, #00695C);
-  background: -o-linear-gradient(#009688, #00695C);
-  background: -moz-linear-gradient(#009688, #00695C);
-  background: linear-gradient(#009688, #00695C);
-    */
+  background-color: #202020;
 }
 @media (min-width: 48em) {
   .sidebar {
@@ -145,13 +140,16 @@ a.sidebar-nav-item:focus {
 
 @media (min-width: 48em) {
   .content {
-    margin-left: 30%;
+    max-width: 38rem;
+    margin-left: 20rem;
+    margin-right: 2rem;
   }
 }
 
 @media (min-width: 64em) {
   .content {
-    margin-left: 23rem;
+    margin-left: 22rem;
+    margin-right: 4rem;
   }
 }
 
