--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,11 @@
 layout: default
 ---
 
-  <div class="page">
-    <h2 class="page-title">{{ page.title }}</h2>
-    {{ content }}
+<div class="container">
+  <div class="content">
+    <div class="page">
+      <h2 class="page-title">{{ page.title }}</h2>
+      {{ content }}
+    </div>
   </div>
+</div>
