update default template

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,11 @@
 <body>
     {% include sidebar.html %}
    
-    {{ content }}
+    <div class="container">
+      <div class="content">
+        {{ content }}
+      </div>
+    </div>
 
     {% include analytics.html %}
     
