--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,10 +5,8 @@
 <body>
     {% include sidebar.html %}
    
-    <div class="container">
-      <div class="content">
-        {{ content }}
-      </div>
+    <div class="content container">
+      {{ content }}
     </div>
 
     {% include analytics.html %}
