--- a/css/hyde.css
+++ b/css/hyde.css
@@ -24,6 +24,7 @@
  * Themes
  */
 
+
 /*
  * Global resets
  *
@@ -31,19 +32,14 @@
  */
 
 html {
-  font-family: "Karla", Roboto, Helvetica, Arial, sans-serif;
+  font-family: "PT Sans", Helvetica, Arial, sans-serif;
 }
 @media (min-width: 48em) {
   html {
     font-size: 16px;
   }
 }
-@media (min-width: 64em) {
-  html {
-    font-size: 18px;
-  }
-}
-@media (min-width: 80em) {
+@media (min-width: 58em) {
   html {
     font-size: 20px;
   }
@@ -61,32 +57,18 @@ html {
   text-align: center;
   padding: 2rem 1rem;
   color: rgba(255,255,255,.5);
-  background: -webkit-linear-gradient(#009688, #00695C);
-  background: -o-linear-gradient(#009688, #00695C);
-  background: -moz-linear-gradient(#009688, #00695C);
-  background: linear-gradient(#009688, #00695C);
+  background-color: #202020;
 }
-
-@media (min-width: 64em) {
+@media (min-width: 48em) {
   .sidebar {
-    display: block;
     position: fixed;
-    width: 25%;
-    height: 100%;
-    display: table;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 18rem;
+    text-align: left;
   }
 }
-
-@media (min-width: 80em) {
-  .sidebar {
-    display: block;
-    position: fixed;
-    width: 20rem;
-    height: 100%;
-    display: table;
-  }
-}
-
 
 /* Sidebar links */
 .sidebar a {
@@ -97,13 +79,8 @@ html {
 .sidebar-about h1 {
   color: #fff;
   margin-top: 0;
-  font-size: 2.5rem;
-  font-weight: normal;
-}
-
-.sidebar-about .logo {
-  margin-left: auto;
-  margin-right: auto;
+  font-family: "Abril Fatface", serif;
+  font-size: 3.25rem;
 }
 
 /* Sidebar nav */
@@ -130,9 +107,10 @@ a.sidebar-nav-item:focus {
 
 @media (min-width: 48em) {
   .sidebar-sticky {
-    display: table-cell;
-    vertical-align: middle;
-    position: relative;
+    position: absolute;
+    right:  1rem;
+    bottom: 1rem;
+    left:   1rem;
   }
 }
 
@@ -144,24 +122,25 @@ a.sidebar-nav-item:focus {
  */
 
 .content {
-  max-width: 44rem;
   padding-top:    4rem;
   padding-bottom: 4rem;
-  margin-left: auto;
-  margin-right: auto;
+}
+
+@media (min-width: 48em) {
+  .content {
+    max-width: 38rem;
+    margin-left: 20rem;
+    margin-right: 2rem;
+  }
 }
 
 @media (min-width: 64em) {
-  .container {
-    margin-left: 25%;
+  .content {
+    margin-left: 22rem;
+    margin-right: 4rem;
   }
 }
 
-@media (min-width: 80em) {
-  .container {
-    margin-left: 20rem;
-  }
-}
 
 /*
  * Reverse layout
@@ -269,130 +248,3 @@ a.sidebar-nav-item:focus {
 .theme-base-0f .related-posts li a:hover {
   color: #8f5536;
 }
-
-.lead {
-  font-size: 0.9rem;
-}
-
-.icon:before {
-  font-family: "foundation-icons";
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  display: inline-block;
-  text-decoration: inherit; }
-
-.navigation {
-  display: inline-block;
-  position: relative;
-  margin: 0;
-  padding: 0;
-  list-style-type: none; }
-
-.sidebar-social {
-  margin-bottom: 1rem; }
-  .sidebar-social a {
-      width: 2em;
-      height: 2em; }
-    .sidebar-social a .label {
-      display: none; }
-    .sidebar-social a .icon {
-      display: block;
-      font-size: 1.34em; }
-
-.social-item {
-  display: inline-block;
-  margin: 1px;
- }
-
-.social-item a {
-  display: block;
-  position: relative;
-  border: 1px solid #BBB;
-  border-radius: 50%;
-  font-weight: bold;
-  text-shadow: none;
-  color: #BBB;
-  -webkit-font-smoothing: antialiased; }
-  .navigation__item a:hover {
-    color: #FFF;
-    border-color: #FFF;
- }
-
-.logo {
-  border-radius: 50%;
-  border: 3px solid #FFF;
-  box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.3); }
-
-.post-comments {
-  border-top: 1px solid #dddddd;
-  padding: 60px 0; }
-
-
-@media (min-width: 48em) {
-  .post-title {
-    font-size: 2.6rem; }
-}
-
-.post-overlay-header {
-  border-radius: 4px;
-  min-height: 190px;
-  background-size: cover;
-  background-position: center;
-  position: relative;
-  margin-bottom: .5rem;
-}
-
-@media (min-width: 48em) {
-  .post-overlay-header {
-    min-height: 300px;
-  }
-}
-
-.post-overlay-header-title {
-  background-color: rgba(0, 0, 0, 0.35);
-  position: absolute;
-  bottom: 0;
-  padding: 1rem 1rem 0 1rem;
-  border-bottom-left-radius: 4px; }
-
-.post-overlay-header a {
-  color: rgba(255, 255,255, 0.92);
-}
-.post-overlay-header a:hover, a:focus {
-  color: #FFF; }
-
-.post-overlay-header .post-date {
-  color: #DDDDDD;
-}
-
-.twitter a:hover {
-  color: #64B5F6;
-  border-color: #64B5F6; }
-
-.gplus a:hover {
-  color: #E57373;
-  border-color: #E57373; }
-
-.github a:hover {
-  color: #90A4AE;
-  border-color: #90A4AE; }
-
-.stackoverflow a:hover {
-  color: #FFD54F;
-  border-color: #FFD54F; }
-
-.foursquare a:hover {
-  color: #7986CB;
-  border-color: #7986CB; }
-
-.linkedin a:hover {
-  color: #64B5F6;
-  border-color: #64B5F6; }
-
-.mail a:hover {
-  color: #4DB6AC;
-  border-color: #4DB6AC; }
