--- a/css/poole.css
+++ b/css/poole.css
@@ -76,20 +76,14 @@ a strong {
 /* `:focus` is linked to `:hover` for basic accessibility */
 a:hover,
 a:focus {
-  color: #006699;
-  -o-transition: .3s;
-  -ms-transition: .3s;
-  -moz-transition: .3s;
-  -webkit-transition: .3s; }
+  text-decoration: underline;
+}
 
 /* Headings */
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Raleway", "Roboto Condensed", Roboto, sans-serif;
-  margin-top: .8rem;
-  margin-bottom: .6rem;
-  font-weight: normal;
+  margin-bottom: .5rem;
+  font-weight: bold;
   line-height: 1.25;
-  letter-spacing: -.03em;
   color: #313131;
   text-rendering: optimizeLegibility;
 }
@@ -98,7 +92,7 @@ h1 {
 }
 h2 {
   margin-top: 1rem;
-  font-size: 1.8rem;
+  font-size: 1.5rem;
 }
 h3 {
   margin-top: 1.5rem;
@@ -154,17 +148,15 @@ abbr[title] {
 }
 
 /* Code */
+code,
 pre {
-  font-family: "Roboto Mono", Menlo, Monaco, "Courier New", monospace;
-  overflow: auto;
-  padding: 1em 2.5%;
+  font-family: Menlo, Monaco, "Courier New", monospace;
 }
 code {
-  font-family: "Roboto Mono", Menlo, Monaco, "Courier New", monospace;
   padding: .25em .5em;
-  font-size: 90%;
+  font-size: 85%;
   color: #bf616a;
-  background-color: #f3f3f3;
+  background-color: #f9f9f9;
   border-radius: 3px;
 }
 pre {
@@ -175,10 +167,10 @@ pre {
   font-size: .8rem;
   line-height: 1.4;
   white-space: pre;
-  overflow: auto;
-  background-color: #EEE;
-  border: 1px solid #CCC;
-  border-radius: .4em;
+  white-space: pre-wrap;
+  word-break: break-all;
+  word-wrap: break-word;
+  background-color: #f9f9f9;
 }
 pre code {
   padding: 0;
@@ -187,9 +179,9 @@ pre code {
   background-color: transparent;
 }
 
-/* Rouge via Jekyll */
+/* Pygments via Jekyll */
 .highlight {
-  margin: 0 0 1rem 0;
+  margin-bottom: 1rem;
   border-radius: 4px;
 }
 .highlight pre {
@@ -294,8 +286,11 @@ tbody tr:nth-child(odd) th {
  */
 
 .container {
+  max-width: 38rem;
   padding-left:  1rem;
   padding-right: 1rem;
+  margin-left:  auto;
+  margin-right: auto;
 }
 
 
@@ -344,13 +339,6 @@ tbody tr:nth-child(odd) th {
 .post-title a {
   color: #303030;
 }
-.post-title a:hover, a:focus {
-  color: #006699;
-  -o-transition: .5s;
-  -ms-transition: .5s;
-  -moz-transition: .5s;
-  -webkit-transition: .5s; }
-
 .page-title,
 .post-title {
   margin-top: 0;
@@ -399,7 +387,9 @@ tbody tr:nth-child(odd) th {
 
 .pagination {
   overflow: hidden; /* clearfix */
-  margin: 3rem 0;
+  margin-left: -1rem;
+  margin-right: -1rem;
+  font-family: "PT Sans", Helvetica, Arial, sans-serif;
   color: #ccc;
   text-align: center;
 }
@@ -409,8 +399,9 @@ tbody tr:nth-child(odd) th {
   display: block;
   padding: 1rem;
   border: 1px solid #eee;
-  float: left;
-  width: 47%;
+}
+.pagination-item:first-child {
+  margin-bottom: -1px;
 }
 
 /* Only provide a hover state for linked pagination items */
@@ -418,15 +409,22 @@ a.pagination-item:hover {
   background-color: #f5f5f5;
 }
 
-.pagination-item:first-child {
-  margin-bottom: 0;
-  margin-left: 3%;
-  border-top-left-radius:    4px;
-  border-bottom-left-radius: 4px;
-}
-.pagination-item:last-child {
-  margin-left: -1px;
-  margin-right: 3%;
-  border-top-right-radius:    4px;
-  border-bottom-right-radius: 4px;
+@media (min-width: 30em) {
+  .pagination {
+    margin: 3rem 0;
+  }
+  .pagination-item {
+    float: left;
+    width: 50%;
+  }
+  .pagination-item:first-child {
+    margin-bottom: 0;
+    border-top-left-radius:    4px;
+    border-bottom-left-radius: 4px;
+  }
+  .pagination-item:last-child {
+    margin-left: -1px;
+    border-top-right-radius:    4px;
+    border-bottom-right-radius: 4px;
+  }
 }
