--- a/css/hyde.css
+++ b/css/hyde.css
@@ -32,7 +32,7 @@
  */
 
 html {
-  font-family: "PT Sans", Helvetica, Arial, sans-serif;
+  font-family: "Karla", Roboto, Helvetica, Arial, sans-serif;
 }
 @media (min-width: 48em) {
   html {
@@ -57,7 +57,10 @@ html {
   text-align: center;
   padding: 2rem 1rem;
   color: rgba(255,255,255,.5);
-  background-color: #202020;
+  background: -webkit-linear-gradient(#009688, #00695C);
+  background: -o-linear-gradient(#009688, #00695C);
+  background: -moz-linear-gradient(#009688, #00695C);
+  background: linear-gradient(#009688, #00695C);
 }
 @media (min-width: 48em) {
   .sidebar {
@@ -66,7 +69,6 @@ html {
     left: 0;
     bottom: 0;
     width: 18rem;
-    text-align: left;
   }
 }
 
@@ -79,8 +81,13 @@ html {
 .sidebar-about h1 {
   color: #fff;
   margin-top: 0;
-  font-family: "Abril Fatface", serif;
-  font-size: 3.25rem;
+  font-size: 2.5rem;
+  font-weight: normal;
+}
+
+.sidebar-about .logo {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* Sidebar nav */
@@ -248,3 +255,7 @@ a.sidebar-nav-item:focus {
 .theme-base-0f .related-posts li a:hover {
   color: #8f5536;
 }
+.logo {
+  border-radius: 50%;
+  border: 3px solid #FFF;
+  box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.3); }
