--- a/css/hyde.css
+++ b/css/hyde.css
@@ -114,10 +114,9 @@ a.sidebar-nav-item:focus {
 
 @media (min-width: 48em) {
   .sidebar-sticky {
-    position: absolute;
-    right:  1rem;
-    bottom: 1rem;
-    left:   1rem;
+    display: table-cell;
+    vertical-align: middle;
+    position: relative;
   }
 }
 
