update sidebar vertical alignment

--- a/css/hyde.css
+++ b/css/hyde.css
@@ -119,9 +119,15 @@ a.sidebar-nav-item:focus {
 
 @media (min-width: 48em) {
   .sidebar-sticky {
+    /*
     display: table-cell;
     vertical-align: bottom;
     position: relative;
+    */
+    position: absolute;
+    right:  1rem;
+    bottom: 1rem;
+    left:   1rem;
   }
 }
 
