--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,32 +11,34 @@
       <p class="sidebar-subtitle">{{ site.description }}</p>
     </div>
 
-    <ul class="navigation">
-      <!-- Twitter -->
-      <li class="social-item twitter">
-        <a href="{{ site.twitter }}" title="me on Twitter" target="_blank">
-          <i class='icon fi-social-twitter'></i>
-        </a>
-      </li>
-      <!-- GitHub -->
-      <li class="social-item github">
-        <a href="{{ site.github }}" title="me on GitHub" target="_blank">
-          <i class='icon fi-social-github'></i>
-        </a>
-      </li>
-      <!-- LinkedIn -->
-      <li class="social-item linkedin">
-        <a href="{{site.linkedin}}" title="me on LinkedIn" target="_blank">
-          <i class='icon fi-social-linkedin'></i>
-        </a>
-      </li>
-      <!-- Medium -->
-      <li class="social-item medium">
-        <a href="{{site.medium}}" title="me on Medium" target="_blank">
-          <i class='icon fi-social-medium'></i>
-        </a>
-      </li>
-    </ul>
+    <div class="sidebar-social">
+      <ul class="navigation">
+        <!-- Twitter -->
+        <li class="social-item twitter">
+          <a href="{{ site.twitter }}" title="me on Twitter" target="_blank">
+            <i class='icon fi-social-twitter'></i>
+          </a>
+        </li>
+        <!-- GitHub -->
+        <li class="social-item github">
+          <a href="{{ site.github }}" title="me on GitHub" target="_blank">
+            <i class='icon fi-social-github'></i>
+          </a>
+        </li>
+        <!-- LinkedIn -->
+        <li class="social-item linkedin">
+          <a href="{{site.linkedin}}" title="me on LinkedIn" target="_blank">
+            <i class='icon fi-social-linkedin'></i>
+          </a>
+        </li>
+        <!-- Medium -->
+        <li class="social-item medium">
+          <a href="{{site.medium}}" title="me on Medium" target="_blank">
+            <i class='icon fi-social-medium'></i>
+          </a>
+        </li>
+      </ul>
+    </div>
 
     <div class="sidebar-nav">
       <a class="sidebar-nav-item" href="/archive/">Archive</a>
