--- a/css/poole.css
+++ b/css/poole.css
@@ -67,7 +67,7 @@ body {
 
 /* No `:visited` state is required by default (browsers will use `a`) */
 a {
-  color: #353865;
+  color: #4650dd;
   text-decoration: none;
 }
 a strong {
@@ -337,7 +337,7 @@ tbody tr:nth-child(odd) th {
 .page-title,
 .post-title,
 .post-title a {
-  color: #303030;
+  color: #4650dd;
 }
 .page-title,
 .post-title {
@@ -370,7 +370,7 @@ tbody tr:nth-child(odd) th {
   color: #999;
 }
 .related-posts li a:hover {
-  color: #353865;
+  color: #4650dd;
   text-decoration: none;
 }
 .related-posts li a:hover small {
