add disqus feature

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,3 +17,8 @@ layout: default
   </span>
   {{ content }}
 </div>
+
+<section id="comments">
+    <h2>Comments</h2>
+    {% include disqus.html %}
+</section>
