update base_url reference in includes

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -48,10 +48,10 @@
   
     
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ site.baseurl }}css/poole.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}css/syntax.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}css/hyde.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}css/foundation-icons.css">
+  <link rel="stylesheet" href="/css/poole.css">
+  <link rel="stylesheet" href="/css/syntax.css">
+  <link rel="stylesheet" href="/css/hyde.css">
+  <link rel="stylesheet" href="/css/foundation-icons.css">
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Karla|Roboto+Mono|Raleway:700">
 
   <!-- Icons -->
