--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,11 +2,11 @@
   <div class="container sidebar-sticky">
     
     <div class="sidebar-about sidebar-title">
-      <a href="{{ site.baseurl }}" title="Link to homepage for {{ site.title }}">
+      <a href="/" title="Link to homepage for {{ site.title }}">
         <img src="{{ site.logo }}" width="80" alt="{{ site.title }} logo" class="panel-cover__logo logo" />
       </a>
       <h2>
-        <a class="sidebar-link" href="{{ site.baseurl }}">{{ site.title }}</a>
+        <a class="sidebar-link" href="/">{{ site.title }}</a>
       </h2>
       <p class="sidebar-subtitle">{{ site.description }}</p>
     </div>
