--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,65 +1,256 @@
-.highlight .hll { background-color: #ffc; }
-.highlight .c { color: #999; } /* Comment */
-.highlight .err { color: #a00; background-color: #faa } /* Error */
-.highlight .k { color: #069; } /* Keyword */
-.highlight .o { color: #555 } /* Operator */
-.highlight .cm { color: #09f; font-style: italic } /* Comment.Multiline */
-.highlight .cp { color: #099 } /* Comment.Preproc */
-.highlight .c1 { color: #999; } /* Comment.Single */
-.highlight .cs { color: #999; } /* Comment.Special */
-.highlight .gd { background-color: #fcc; border: 1px solid #c00 } /* Generic.Deleted */
-.highlight .ge { font-style: italic } /* Generic.Emph */
-.highlight .gr { color: #f00 } /* Generic.Error */
-.highlight .gh { color: #030; } /* Generic.Heading */
-.highlight .gi { background-color: #cfc; border: 1px solid #0c0 } /* Generic.Inserted */
-.highlight .go { color: #aaa } /* Generic.Output */
-.highlight .gp { color: #009; } /* Generic.Prompt */
-.highlight .gs { } /* Generic.Strong */
-.highlight .gu { color: #030; } /* Generic.Subheading */
-.highlight .gt { color: #9c6 } /* Generic.Traceback */
-.highlight .kc { color: #069; } /* Keyword.Constant */
-.highlight .kd { color: #069; } /* Keyword.Declaration */
-.highlight .kn { color: #069; } /* Keyword.Namespace */
-.highlight .kp { color: #069 } /* Keyword.Pseudo */
-.highlight .kr { color: #069; } /* Keyword.Reserved */
-.highlight .kt { color: #078; } /* Keyword.Type */
-.highlight .m { color: #f60 } /* Literal.Number */
-.highlight .s { color: #d44950 } /* Literal.String */
-.highlight .na { color: #4f9fcf } /* Name.Attribute */
-.highlight .nb { color: #366 } /* Name.Builtin */
-.highlight .nc { color: #0a8; } /* Name.Class */
-.highlight .no { color: #360 } /* Name.Constant */
-.highlight .nd { color: #99f } /* Name.Decorator */
-.highlight .ni { color: #999; } /* Name.Entity */
-.highlight .ne { color: #c00; } /* Name.Exception */
-.highlight .nf { color: #c0f } /* Name.Function */
-.highlight .nl { color: #99f } /* Name.Label */
-.highlight .nn { color: #0cf; } /* Name.Namespace */
-.highlight .nt { color: #2f6f9f; } /* Name.Tag */
-.highlight .nv { color: #033 } /* Name.Variable */
-.highlight .ow { color: #000; } /* Operator.Word */
-.highlight .w { color: #bbb } /* Text.Whitespace */
-.highlight .mf { color: #f60 } /* Literal.Number.Float */
-.highlight .mh { color: #f60 } /* Literal.Number.Hex */
-.highlight .mi { color: #f60 } /* Literal.Number.Integer */
-.highlight .mo { color: #f60 } /* Literal.Number.Oct */
-.highlight .sb { color: #c30 } /* Literal.String.Backtick */
-.highlight .sc { color: #c30 } /* Literal.String.Char */
-.highlight .sd { color: #c30; font-style: italic } /* Literal.String.Doc */
-.highlight .s2 { color: #c30 } /* Literal.String.Double */
-.highlight .se { color: #c30; } /* Literal.String.Escape */
-.highlight .sh { color: #c30 } /* Literal.String.Heredoc */
-.highlight .si { color: #a00 } /* Literal.String.Interpol */
-.highlight .sx { color: #c30 } /* Literal.String.Other */
-.highlight .sr { color: #3aa } /* Literal.String.Regex */
-.highlight .s1 { color: #c30 } /* Literal.String.Single */
-.highlight .ss { color: #fc3 } /* Literal.String.Symbol */
-.highlight .bp { color: #366 } /* Name.Builtin.Pseudo */
-.highlight .vc { color: #033 } /* Name.Variable.Class */
-.highlight .vg { color: #033 } /* Name.Variable.Global */
-.highlight .vi { color: #033 } /* Name.Variable.Instance */
-.highlight .il { color: #f60 } /* Literal.Number.Integer.Long */
+/* ==========================================================================
+   Syntax highlighting
+   ========================================================================== */
+pre, code {
+  font-family: "Roboto Mono", "Courier New", monospace;
+  color: #525252;
+  font-size: 0.9em;
+  background-color: #f8f8f8;
+  font-size: 10px; }
 
-.css .o,
-.css .o + .nt,
-.css .nt + .nt { color: #999; }
+code {
+  color: #e96900;
+  border-radius: 2px;
+  white-space: nowrap; }
+
+pre {
+  overflow: auto;
+  display: block;
+  padding: 1em;
+  margin: 0 0 1em;
+  line-height: 1.3875;
+  word-break: keep-all;
+  word-wrap: nowrap;
+  border-radius: 0;
+  font-weight: normal; }
+
+pre code {
+  background: transparent;
+  white-space: pre;
+  overflow: auto;
+  word-wrap: nowrap;
+  color: #525252; }
+
+pre code span {
+    word-break: keep-all; }
+
+.highlight {
+  margin: 0;
+  /* Comment */
+  /* Error */
+  /* Keyword */
+  /* Operator */
+  /* Comment.Multiline */
+  /* Comment.Preproc */
+  /* Comment.Single */
+  /* Comment.Special */
+  /* Generic.Deleted */
+  /* Generic.Emph */
+  /* Generic.Error */
+  /* Generic.Heading */
+  /* Generic.Inserted */
+  /* Generic.Output */
+  /* Generic.Prompt */
+  /* Generic.Strong */
+  /* Generic.Subheading */
+  /* Generic.Traceback */
+  /* Keyword.Constant */
+  /* Keyword.Declaration */
+  /* Keyword.Namespace */
+  /* Keyword.Pseudo */
+  /* Keyword.Reserved */
+  /* Keyword.Type */
+  /* Literal.Number */
+  /* Literal.String */
+  /* Name.Attribute */
+  /* Name.Builtin */
+  /* Name.Class */
+  /* Name.Constant */
+  /* Name.Decorator */
+  /* Name.Entity */
+  /* Name.Exception */
+  /* Name.Function */
+  /* Name.Label */
+  /* Name.Namespace */
+  /* Name.Tag */
+  /* Name.Variable */
+  /* Operator.Word */
+  /* Text.Whitespace */
+  /* Literal.Number.Float */
+  /* Literal.Number.Hex */
+  /* Literal.Number.Integer */
+  /* Literal.Number.Oct */
+  /* Literal.String.Backtick */
+  /* Literal.String.Char */
+  /* Literal.String.Doc */
+  /* Literal.String.Double */
+  /* Literal.String.Escape */
+  /* Literal.String.Heredoc */
+  /* Literal.String.Interpol */
+  /* Literal.String.Other */
+  /* Literal.String.Regex */
+  /* Literal.String.Single */
+  /* Literal.String.Symbol */
+  /* Name.Builtin.Pseudo */
+  /* Name.Variable.Class */
+  /* Name.Variable.Global */
+  /* Name.Variable.Instance */
+  /* Literal.Number.Integer.Long */ }
+  .highlight pre {
+    position: relative; }
+  .highlight pre code {
+    color: #525252; }
+  .highlight pre code::before {
+      content: attr(data-lang);
+      position: absolute;
+      top: 0;
+      right: 0;
+      color: #ccc;
+      text-align: right;
+      text-transform: uppercase;
+      font-size: 0.85em;
+      padding: 5px 10px 0;
+      line-height: 20px;
+      height: 20px;
+      font-weight: 600; }
+  .highlight .hll {
+    background-color: #ffffcc; }
+  .highlight .c {
+    color: #B0B2B0;
+    font-style: italic; }
+  .highlight .k {
+    color: #AA22FF;
+    font-weight: bold; }
+  .highlight .o {
+    color: #666666; }
+  .highlight .cm {
+    color: #B0B2B0;
+    font-style: italic; }
+  .highlight .cp {
+    color: #B0B2B0; }
+  .highlight .c1 {
+    color: #B0B2B0;
+    font-style: italic; }
+  .highlight .cs {
+    color: #B0B2B0;
+    font-weight: bold; }
+  .highlight .gd {
+    color: #A00000; }
+  .highlight .ge {
+    font-style: italic; }
+  .highlight .gr {
+    color: #FF0000; }
+  .highlight .gh {
+    color: #000080;
+    font-weight: bold; }
+  .highlight .gi {
+    color: #00A000; }
+  .highlight .go {
+    color: #808080; }
+  .highlight .gp {
+    color: #000080;
+    font-weight: bold; }
+  .highlight .gs {
+    font-weight: bold; }
+  .highlight .gu {
+    color: #800080;
+    font-weight: bold; }
+  .highlight .gt {
+    color: #0040D0; }
+  .highlight .kc {
+    color: #AA22FF;
+    font-weight: bold; }
+  .highlight .kd {
+    color: #AA22FF;
+    font-weight: bold; }
+  .highlight .kn {
+    color: #AA22FF;
+    font-weight: bold; }
+  .highlight .kp {
+    color: #AA22FF; }
+  .highlight .kr {
+    color: #AA22FF;
+    font-weight: bold; }
+  .highlight .kt {
+    color: #00BB00;
+    font-weight: bold; }
+  .highlight .m {
+    color: #666666; }
+  .highlight .s {
+    color: #BB4444; }
+  .highlight .na {
+    color: #BB4444; }
+  .highlight .nb {
+    color: #AA22FF; }
+  .highlight .nc {
+    color: #0000FF; }
+  .highlight .no {
+    color: #880000; }
+  .highlight .nd {
+    color: #AA22FF; }
+  .highlight .ni {
+    color: #999999;
+    font-weight: bold; }
+  .highlight .ne {
+    color: #D2413A;
+    font-weight: bold; }
+  .highlight .nf {
+    color: #00A000; }
+  .highlight .nl {
+    color: #A0A000; }
+  .highlight .nn {
+    color: #0000FF;
+    font-weight: bold; }
+  .highlight .nt {
+    color: #008000;
+    font-weight: bold; }
+  .highlight .nv {
+    color: #B8860B; }
+  .highlight .ow {
+    color: #AA22FF;
+    font-weight: bold; }
+  .highlight .w {
+    color: #bbbbbb; }
+  .highlight .mf {
+    color: #666666; }
+  .highlight .mh {
+    color: #666666; }
+  .highlight .mi {
+    color: #666666; }
+  .highlight .mo {
+    color: #666666; }
+  .highlight .sb {
+    color: #BB4444; }
+  .highlight .sc {
+    color: #BB4444; }
+  .highlight .sd {
+    color: #BB4444;
+    font-style: italic; }
+  .highlight .s2 {
+    color: #BB4444; }
+  .highlight .se {
+    color: #BB6622;
+    font-weight: bold; }
+  .highlight .sh {
+    color: #BB4444; }
+  .highlight .si {
+    color: #BB6688;
+    font-weight: bold; }
+  .highlight .sx {
+    color: #008000; }
+  .highlight .sr {
+    color: #BB6688; }
+  .highlight .s1 {
+    color: #BB4444; }
+  .highlight .ss {
+    color: #B8860B; }
+  .highlight .bp {
+    color: #AA22FF; }
+  .highlight .vc {
+    color: #B8860B; }
+  .highlight .vg {
+    color: #B8860B; }
+  .highlight .vi {
+    color: #B8860B; }
+  .highlight .il {
+    color: #666666; }
