--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -13,6 +13,13 @@
 
     <div class="sidebar-social">
       <ul class="navigation">
+        <!-- DEV.to -->
+        <li class="social-item">
+          <a href="https://dev.to/kingsor" title="me on DEV.to" target="_blank">
+            <i class='icon fi-social-twitter'></i>
+            <img src="https://d2fltix0v2e0sb.cloudfront.net/dev-badge.svg" alt="My DEV Profile" height="30" width="30" />
+          </a>
+        </li>
         <!-- Twitter -->
         <li class="social-item twitter">
           <a href="{{ site.twitter }}" title="me on Twitter" target="_blank">
