--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,9 +14,9 @@
     <div class="sidebar-social">
       <ul class="navigation">
         <!-- DEV.to -->
-        <li class="social-item">
+        <li class="social-item dev">
           <a href="https://dev.to/kingsor" title="me on DEV.to" target="_blank">
-            <img src="https://d2fltix0v2e0sb.cloudfront.net/dev-badge.svg" alt="My DEV Profile" height="30" width="30" />
+            <i class='icon dev-badge'></i>
           </a>
         </li>
         <!-- Twitter -->
