--- a/_includes/head.html
+++ b/_includes/head.html
@@ -55,8 +55,9 @@
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Karla|Roboto+Mono|Raleway:700">
 
   <!-- Icons -->
-  <link rel="apple-touch-icon-precomposed" sizes="128x128" href="/images/favicon-128.png">
-  <link rel="shortcut icon" href="/images/favicon-16.ico">
+  <link rel="shortcut icon" href="/images/favicon.ico">
+  <link rel="icon" type="image/png" href="/images/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="/images/favicon-16x16.png" sizes="16x16" />
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" href="/atom.xml" />
