Update sidebar links

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -49,9 +49,10 @@
     </div>
 
     <div class="sidebar-nav">
-      <a class="sidebar-nav-item" href="/italang/">Italian</a>
-      <a class="sidebar-nav-item" href="/archive/">Archive</a>
-      <a class="sidebar-nav-item" href="/resources/">Resources</a>
+      <a class="sidebar-nav-item" title="Tags used in this blog" href="/tags/">Tags</a>
+      <a class="sidebar-nav-item" title="My posts in italian language" href="/italang/">Italian</a>
+      <a class="sidebar-nav-item" title="The list of all my posts" href="/archive/">Archive</a>
+      <a class="sidebar-nav-item" title="A list of resources usefull as a developer" href="/resources/">Resources</a>
       <!--
       <a class="sidebar-nav-item" href="/about/">About</a>
       -->
