Update lang identifier

--- a/css/poole.css
+++ b/css/poole.css
@@ -312,6 +312,11 @@ tbody tr:nth-child(odd) th {
   color: #9a9a9a;
 }
 
+.post-lang {
+  display: block;
+  color: #797979;
+}
+
 /* Related posts */
 .related {
   padding-top: 2rem;
