--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,8 @@
    
     <div class="content container">
       {{ content }}
+
+      {% include paginator.html %}
     </div>
 
     {% include analytics.html %}
