Minor updates to layout

--- a/_includes/timeago.html
+++ b/_includes/timeago.html
@@ -11,7 +11,7 @@
   {% if include.tooltip %}
     data-toggle="tooltip"
     data-placement="bottom"
-    title="{{ include.date | date: tooltip_df }}"
+    title="{{ include.date | date: post_long_df }}"
   {% endif %}
 
   {% if include.prefix %}prefix="{{ include.prefix }} "{% endif%}
