--- a/_layouts/archives.html
+++ b/_layouts/archives.html
@@ -20,7 +20,7 @@ layout: page
         {% capture this_month %}{{ post.date | date: "%b" }}{% endcapture %}
         <span class="date day">{{ this_day }}</span>
         <span class="date month small text-muted">{{ this_month }}</span>
-        <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
+        <a href="{{ post.url | relative_url }}" title="{{ post.description }}">{{ post.title }}</a>
       </div>
     </li>
   {% if forloop.last %}
