--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -51,8 +51,11 @@ layout: page
 
     <div class="post-content">
       <p>
+      <!--
         {% include no-linenos.html content=post.content %}
         {{ content | markdownify | strip_html | truncate: 200 }}
+      -->
+      {{ post.description }}
       </p>
     </div>
 
