Add new js library
- lazy-youtube-embed-js

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -66,4 +66,6 @@
 
   <script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
 
+  {% include lazy-youtube-embed-css.html %}
+
 </head>
