--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,8 @@ layout: compress
 
   <body data-spy="scroll" data-target="#toc">
 
+    {% include youtube-logo-svg.html %}
+
     {% include sidebar.html %}
 
     {% include topbar.html %}
@@ -48,7 +50,9 @@ layout: compress
 
     {% include js-selector.html %}
 	
-	{% include ext-links-js.html %}
+	  {% include ext-links-js.html %}
+
+    {% include lazy-youtube-embed-js.html %}
 
   </body>
 
