--- a/_includes/lazy-youtube-embed-css.html
+++ b/_includes/lazy-youtube-embed-css.html
@@ -7,4 +7,4 @@ if (window.Element && !Element.prototype.closest) {
 }
 </script>
 <link rel="stylesheet" href="/assets/css/global.css" />
-<link rel="stylesheet" href="/assets/css/youtubeLazy.css" />
+<link rel="stylesheet" href="/assets/css/youtubelazy.css" />
